add r version of binomial mixture; set up c++

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: permtools
-Title: What the Package Does (One Line, Title Case)
+Title: Tools for permutation testing
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Tim", "Barry", , "tbarry@hsph.harvard.edu", role = c("aut", "cre"))
+Description: This package implements tools for permutation testing, including methods for adaptive permutation testing based on anytime-valid inference and betting.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+LinkingTo: Rcpp, BH
+Imports:
+    Rcpp (>= 1.0.9)
